test/bad/generators/nested02.px

func f() def
    func g(): Int... def
        return
    g()

f()
